--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "run-docker": "docker run --name nodejs-image-demo -p 8080:3000 -d deadmanswitch/node-js-image"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.30",
     "autoprefixer": "10.4.15",
     "dotenv": "^16.3.1",
     "eslint": "8.49.0",
@@ -20,15 +21,16 @@
     "googleapis": "^128.0.0",
     "http": "0.0.1-security",
     "https": "^1.0.0",
-    "next": "13.4.19",
+    "next": "^14.0.2",
     "node-mailjet": "^6.0.4",
     "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
     "@types/node": "20.9.0",
-    "@types/react": "18.2.37"
+    "@types/react": "18.2.37",
+    "typescript": "5.2.2"
   }
 }
