--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/styled-components": "^5.1.30",
     "autoprefixer": "10.4.15",
+    "babel-plugin-styled-components": "^2.1.4",
     "dotenv": "^16.3.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
