--- a/package.json
+++ b/package.json
@@ -14,20 +14,33 @@
   "dependencies": {
     "@types/styled-components": "^5.1.30",
     "autoprefixer": "10.4.15",
+    "aws4": "^1.12.0",
     "babel-plugin-styled-components": "^2.1.4",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.3",
     "googleapis": "^128.0.0",
     "http": "0.0.1-security",
     "https": "^1.0.0",
+    "mongoose": "^8.0.1",
     "next": "^14.0.2",
     "node-mailjet": "^6.0.4",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "postcss": "8.4.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "20.9.0",
