Changed structure, added sign in (currently not working) but sending mails in time.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
     "**/*.ts",
     "**/*.tsx",
     "src/components/index.js"
-  ],
+, "src/pages/_app.js"  ],
   "exclude": [
     "node_modules"
   ]
