--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "https": "^1.0.0",
     "mongoose": "^8.0.1",
     "next": "^14.0.2",
+    "next-auth": "^4.24.5",
     "node-mailjet": "^6.0.4",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
