--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-styled-components": "^2.1.4",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "child_process": "^1.0.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
@@ -30,7 +31,9 @@
     "googleapis": "^128.0.0",
     "http": "0.0.1-security",
     "https": "^1.0.0",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
+    "net": "^1.0.2",
     "next": "^14.0.2",
     "next-auth": "^4.24.5",
     "node-mailjet": "^6.0.4",
