adjustments of design and structure but still occurs error during post request

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,8 +29,10 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx",
-    "src/components/index.js"
-, "src/pages/_app.js"  ],
+    "src/components/index.js",
+    "src/pages/_app.js",
+    "dist/types/**/*.ts"
+  ],
   "exclude": [
     "node_modules"
   ]
