--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "express": "^4.18.2",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
+    "formik": "^2.4.5",
     "googleapis": "^128.0.0",
     "http": "0.0.1-security",
     "https": "^1.0.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
-    "net": "^1.0.2",
     "next": "^14.0.2",
     "next-auth": "^4.24.5",
     "node-mailjet": "^6.0.4",
@@ -44,7 +44,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "3.3.3",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "20.9.0",
