--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "postcss": "8.4.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.0",
     "tailwindcss": "3.3.3",
     "uuid": "^9.0.1",
     "yup": "^1.3.2"
