--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "https": "^1.0.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
-    "next": "^14.0.2",
+    "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "node-mailjet": "^6.0.4",
     "passport": "^0.6.0",
@@ -46,6 +46,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.0",
+    "styled-icons": "^10.47.0",
     "tailwindcss": "3.3.3",
     "uuid": "^9.0.1",
     "yup": "^1.3.2"
